--- a/Readme
+++ b/Readme
@@ -1,10 +1,21 @@
 1.今天遇到的问题过于多了,vpn感觉十分需要，可眼下并没有合适的
+
 2.正则表达式是真的坑，我透
 
 很久没记录了
 
 3.介于docker 拉取国内包有问题，今天主要任务是配置docker　
+
 4.五月十二日，今天docker也配置好了，还找到了便宜好用的vpn，爽歪歪
 
 5.要结束了呀
+
+6.今天算是全部结束了，学习过程很多坎坷，不过都已经坚持过来了，坚持学习真的是件不容易的事，以后又要再接再厉
+
+7.接下来暂时的打算是学习leecode上的算法，毕竟自己实在是太差，读研究生不能把自己荒废了
+
+8.今天是五月二十日，并没有什么实质性的意义，但今天很重要。。。
+
+9.对于论文，创新思维啥的，完全没有，我至今都只能局限在论文本身，按照论文作者的思维去思考，怎样样才能有自己角度区理解别人的论文
+  是我现在最困扰的，
 
